syntax = "proto3";
package webPage;

message List{
    string title = 1;
    int32 numIterms = 2;
    ItemType type = 3;


    enum ItemType{
    INTS = 0;
    STRINGS = 1;
    BOOLS = 2;

    }
    message Item{
    string name = 1;
    int32 number = 2;
    bool switch = 3;
    }

    repeated Item items = 4;
}


message ListofLists{

    repeated List list = 1;
}
